# QtCPP-Installer

./: .gitignore  CMakeLists.txt  Linux Compilation Steps.txt  QtCPP-Installer.pro  README.md  build-win64.bat  downloadmanager.cpp  downloadmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  segmentdownloader.cpp  segmentdownloader.h  utils.h
resources/: resources.qrc
resources/data/: Qt6CPP-App.7z  data.7z
resources/themes/: dark.qss  light.qss
